Adding mesotherapy and post partum. Adding pictures for vacuslima and gold detox.

--- a/namaste/namaste_app/templates/booking.html
+++ b/namaste/namaste_app/templates/booking.html
@@ -22,7 +22,7 @@
             <div class="col-md-4">
                 <div class="service-item wow fadeIn">
                     <div class="thumb">
-                        <img src="/static/img/namaste/golden_detox.jpg" alt="">
+                        <img src="/static/img/namaste/gold-detox-new.jpg" alt="">
                     </div>
                     <div class="package text-center">
                         <h3 class="package-title" id="package-title">Gold Detox (6 Secciones)</h3>
@@ -137,7 +137,7 @@
             <div class="col-md-4">
                 <div class="service-item wow fadeIn">
                     <div class="thumb">
-                        <img src="/static/img/namaste/golden_detox.jpg" alt="">
+                        <img src="/static/img/namaste/gold-detox-new.jpg" alt="">
                     </div>
                     <div class="package text-center">
                         <h3 class="package-title" id="package-title">Gold Detox</h3>
@@ -151,7 +151,7 @@
             <div class="col-md-4">
                 <div class="service-item wow fadeIn">
                     <div class="thumb">
-                        <img src="/static/img/namaste/vacuslim.jpg" alt="">
+                        <img src="/static/img/namaste/vacuslim_new.jpg" alt="">
                     </div>
                     <div class="package text-center">
                         <h3 class="package-title" id="package-title">Vacuslim-48</h3>
@@ -313,6 +313,32 @@
                         <p>Contrae los músculos a traves de la estimulación y frecuencia. Nos permite tonificar los músculos y moldear el área.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
                         <a href="{% url 'lebody' %}" class="btn btn-primary">Mas Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="service-item wow fadeIn">
+                    <div class="thumb">
+                        <img src="/static/img/namaste/mesoterapia.jpg" alt="">
+                    </div>
+                    <div class="package text-center">
+                        <h3 class="package-title" id="package-title">Mesoterapia</h3>
+                        <p>Consiste en la aplicacion de activos mediante microagujas. Cada activo va dirigido a un objeto diferente dependiendo en la necesidad del cliente.</p>
+                        <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
+                        <a href="{% url 'mesoterapia' %}" class="btn btn-primary">Mas Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="service-item wow fadeIn">
+                    <div class="thumb">
+                        <img src="/static/img/namaste/post-parto.jpg" alt="">
+                    </div>
+                    <div class="package text-center">
+                        <h3 class="package-title" id="package-title">Post Parto</h3>
+                        <p>Este drenaje linfático asiste en la reducción de la retención de líquidos y contribuye a la recuperación del tono de la zona abdominal y pélvica.</p>
+                        <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
+                        <a href="{% url 'post_parto' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
