--- a/namaste/namaste_app/templates/gold_detox.html
+++ b/namaste/namaste_app/templates/gold_detox.html
@@ -25,7 +25,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<img src="/static/img/namaste/golden_detox.jpg" alt="">
+							<img src="/static/img/namaste/gold-detox-new.jpg" alt="">
 						</div>
 						<div class="package text-center">
 							<h3 class="package-title" id="package-title">Gold Detox</h3>
@@ -36,7 +36,11 @@
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Por cada 1/6 Secciones<br>$65</h3>
+						<h3>Gold Detox</h3>
+						<ul>
+							<li><b>Por Cada 1/6 Secciones</b>-> $65</li>
+							<li><b>Por Paquete de 6 secciones</b>-> $300 (Ahorras $30)</li>
+						</ul><br>
 						<p>Con el Gold Detox logramos estimular todos los puntos y campos energéticos, facilitando la circulación de líquidos que, en conjunto, forman parte del sistema linfático.</p>
 						<h3>Con este tratamiento logramos:</h3>
 						<ul>
@@ -48,21 +52,33 @@
 							<li>Controlar el nivel de proteina en el curepo.</li>
 						</ul>
 						<br>
-						<h3>Requerimientos</h3>
-						<p>Se require un deposito de $90 dolares lo cual serian los $15 dolares por cada una de las secciones agendadas.</p>
-						<p>Luego en cada seccion se le acreditara al pago los $15 dolares depositados.</p>
-						<h3>AHORRA $30</h3>
-						<p>Al seleccionar el paquete de 6 secciones, obtendras un descuento de $30 dolares.</p>
-						<ul>
-							<li>Precio regular: $390</li>
-							<li>Precio paquete de 6 secciones: $360</li>
-						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- end services -->
+	<section class="section-spacing inverse-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div>
+						<div class="section-title text-center">
+							<h2><span>Paquetes de 6 Secciones</span></h2>
+							<ul>
+								<li>Se requiere un depósito de $180 lo cual seria mitad del servicio agendado por las 6 secciones.</li><br>
+								<li>Luego en su primera cita se pagarian los otros $180 saldando el servicio en su totalidad.</li><br>
+								<li>Al seleccionar el paquete de 6 secciones obtendras un descuento de $30 dolares.</li><br>
+								<li>Precio Regular $390</li><br>
+								<li>Precio de Paquete (6 secciones) $360</li><br>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end Reglas paquetes -->
 
 	<section class="section-spacing inverse-bg">
 		<div class="container">
@@ -113,7 +129,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim_new.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
