--- a/namaste/namaste_app/templates/informacion_de_cliente.html
+++ b/namaste/namaste_app/templates/informacion_de_cliente.html
@@ -223,6 +223,8 @@ button {
                                         <option value="Lipolaser">Lipolaser</option>
                                         <option value="Vacumterapia">Vacumterapia</option>
                                         <option value="LeBody">LeBody</option>
+                                        <option value="Mesoterapia">Mesoterapia</option>
+                                        <option value="Post Parto">Post Parto</option>
                                         <option value="Otro">Otro</option>
                                     </select>
                                 </div>
