--- a/namaste/namaste_app/templates/metal_therapy.html
+++ b/namaste/namaste_app/templates/metal_therapy.html
@@ -39,7 +39,11 @@
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Por área:<br>$50</h3>
+						<h3>Metaloterapia</h3>
+						<ul>
+							<li><b>Por Area</b>-> $55</li>
+							<li><b>Por Paquete de 6 secciones</b>-> $300 (Ahorras $30)</li>
+						</ul>
 						<p>Metaloterapia utiliza herramientas especialmente diseñadas de diferentes metales para aplicar presión y calor sobre el cuerpo. </p>
 						<p>Esta combinación ayuda a liberar tensiones musculares, mejorar la circulación y promover un estado de relajación total.</p>
 						<h3>Beneficios</h3>
@@ -54,6 +58,27 @@
 		</div>
 	</section>
 	<!-- end services -->
+	<section class="section-spacing inverse-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div>
+						<div class="section-title text-center">
+							<h2><span>Paquetes de 6 Secciones</span></h2>
+							<ul>
+								<li>Se requiere un depósito de $150 lo cual seria mitad del servicio agendado por las 6 secciones.</li><br>
+								<li>Luego en su primera cita se pagarian los otros $150 saldando el servicio en su totalidad.</li><br>
+								<li>Al seleccionar el paquete de 6 secciones obtendras un descuento de $30 dolares.</li><br>
+								<li>Precio Regular $330</li><br>
+								<li>Precio de Paquete (6 secciones) $300</li><br>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end Reglas paquetes -->
 
 	<section class="section-spacing inverse-bg">
 		<div class="container">
@@ -104,7 +129,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim_new.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
