--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -85,7 +85,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'detox-oro' %}"><img src="/static/img/namaste/golden_detox.jpg" alt=""></a>
+							<a href="{% url 'detox-oro' %}"><img src="/static/img/namaste/gold-detox-new.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'detox-oro' %}">Gold Detox</a></h3>
@@ -98,7 +98,7 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim_new.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
 							<h3><a href="{% url 'vacuslim' %}">Vacuslim-48</a></h3>
@@ -235,6 +235,32 @@
 							<h3><a href="{% url 'vacumterapia' %}">Vacumterapia</a></h3>
 							<p>Ayuda a mejorar la apariencia natural del glúteo, eliminando la apariencia de la celulitis primer nivel.</p>
 							<a href="{% url 'vacumterapia' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'mesoterapia' %}"><img src="/static/img/namaste/mesoterapia.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'mesoterapia' %}">Mesoterapia</a></h3>
+							<p>Consiste en la aplicacion de activos mediante microagujas. Cada activo va dirigido a un objeto diferente dependiendo en la necesidad del cliente.</p>
+							<a href="{% url 'mesoterapia' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'post_parto' %}"><img src="/static/img/namaste/post-parto.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'post_parto' %}">Post Parto</a></h3>
+							<p>Este drenaje linfático asiste en la reducción de la retención de líquidos y contribuye a la recuperación del tono de la zona abdominal y pélvica.</p>
+							<a href="{% url 'post_parto' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
