--- a/namaste/namaste_app/templates/wood_therapy.html
+++ b/namaste/namaste_app/templates/wood_therapy.html
@@ -39,7 +39,11 @@
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Por área:<br>$55</h3>
+						<h3>Maderoterapia</h3>
+						<ul>
+							<li><b>Por Area</b>-> $55</li>
+							<li><b>Por Paquete de 6 secciones</b>-> $300 (Ahorras $30)</li>
+						</ul><br>
 						<p>La Maderoterapia corporal es una terapia no invasiva, que actúa directamente en el campo energético. Con ella podemos realizar:</p>
 						<ul>
 							<li>Masajes corporales</li>
@@ -55,6 +59,27 @@
 		</div>
 	</section>
 	<!-- end services -->
+	<section class="section-spacing inverse-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div>
+						<div class="section-title text-center">
+							<h2><span>Paquetes de 6 Secciones</span></h2>
+							<ul>
+								<li>Se requiere un depósito de $150 lo cual seria mitad del servicio agendado por las 6 secciones.</li><br>
+								<li>Luego en su primera cita se pagarian los otros $150 saldando el servicio en su totalidad.</li><br>
+								<li>Al seleccionar el paquete de 6 secciones obtendras un descuento de $30 dolares.</li><br>
+								<li>Precio Regular $330</li><br>
+								<li>Precio de Paquete (6 secciones) $300</li><br>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end Reglas paquetes -->
 
 	<section class="section-spacing inverse-bg">
 		<div class="container">
