Adding the laser services and replacing vacumtherapy pictures and title

--- a/namaste/namaste_app/templates/booking.html
+++ b/namaste/namaste_app/templates/booking.html
@@ -292,10 +292,10 @@
             <div class="col-md-4">
                 <div class="service-item wow fadeIn">
                     <div class="thumb">
-                        <img src="/static/img/namaste/vacuterapia.jpg" alt="">
+                        <img src="/static/img/namaste/maquina_de_gluteos.jpg" alt="">
                     </div>
                     <div class="package text-center">
-                        <h3 class="package-title" id="package-title">Vacumterapia</h3>
+                        <h3 class="package-title" id="package-title">Maquina de Gluteos</h3>
                         <p>Ayuda a mejorar la apariencia natural del glúteo, eliminando la apariencia de la celulitis primer nivel.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
                         <a href="{% url 'vacumterapia' %}" class="btn btn-primary">Mas Info</a>
@@ -313,6 +313,19 @@
                         <p>Contrae los músculos a traves de la estimulación y frecuencia. Nos permite tonificar los músculos y moldear el área.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
                         <a href="{% url 'lebody' %}" class="btn btn-primary">Mas Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="service-item wow fadeIn">
+                    <div class="thumb">
+                        <img src="/static/img/namaste/laser.jpg" alt="">
+                    </div>
+                    <div class="package text-center">
+                        <h3 class="package-title" id="package-title">Laser</h3>
+                        <p>El láser de diodo es un tipo de láser que emite luz en una longitud de onda específica (800-810 nm), ideal para depilación y tratamientos dermatológicos.</p>
+                        <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
+                        <a href="{% url 'laser' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
