--- a/namaste/namaste_app/templates/informacion_de_cliente.html
+++ b/namaste/namaste_app/templates/informacion_de_cliente.html
@@ -225,6 +225,7 @@ button {
                                         <option value="LeBody">LeBody</option>
                                         <option value="Mesoterapia">Mesoterapia</option>
                                         <option value="Post Parto">Post Parto</option>
+                                        <option value="Laser">Laser</option>
                                         <option value="Otro">Otro</option>
                                     </select>
                                 </div>
