--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -107,8 +107,18 @@
 						</div>
 					</div>
 				</div>
-			
-
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'laser' %}"><img src="/static/img/namaste/laser.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'laser' %}">Laser De Diodo</a></h3>
+							<p>El láser de diodo es un tipo de láser que emite luz en una longitud de onda específica (800-810 nm), ideal para depilación y tratamientos dermatológicos.</p>
+							<a href="{% url 'laser' %}" class="btn btn-default">Leer Mas</a>
+						</div>
+					</div>
+				</div>
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
@@ -229,10 +239,10 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'vacumterapia' %}"><img src="/static/img/namaste/vacuterapia.jpg" alt=""></a>
+							<a href="{% url 'vacumterapia' %}"><img src="/static/img/namaste/maquina_de_gluteos.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'vacumterapia' %}">Vacumterapia</a></h3>
+							<h3><a href="{% url 'vacumterapia' %}">Maquina de Gluteos</a></h3>
 							<p>Ayuda a mejorar la apariencia natural del glúteo, eliminando la apariencia de la celulitis primer nivel.</p>
 							<a href="{% url 'vacumterapia' %}" class="btn btn-default">Leer Mas</a>
 						</div>
