Fixing the trash outline bug and fixing some entries in the base.html

--- a/namaste/namaste_app/templates/admin_base.html
+++ b/namaste/namaste_app/templates/admin_base.html
@@ -120,9 +120,9 @@
 						<div class="footer-widget">
 							<h3>Horas de Operaciones</h3>
 							<ul class="bussiness-hour">
-								<li>Lunes-Viernes: <span class="pull-right">9am - 4pm.</span></li>
-								<li>Sabado: <span class="pull-right">09am - 12pm.</span></li>
-								<li>Domingo: <span class="pull-right">Closed.</span></li>
+								<li>Lunes-Viernes: <span class="pull-right">9am - 5pm</span></li>
+								<li>Sabado: <span class="pull-right">9am - 1pm</span></li>
+								<li>Domingo: <span class="pull-right">Closed</span></li>
 							</ul>
 						</div>
 					</div>
@@ -172,6 +172,9 @@
 	<!-- <script src="/static/mail/js/form-validator.min.js"></script> -->
 	<!-- <script src="/static/mail/js/contact-form-script.js"></script> -->
     <script src="/static/js/script.js"></script>
+
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	
 </body>
 </html>
