--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -122,8 +122,8 @@
 						<div class="footer-widget">
 							<h3>Horas de Operaciones</h3>
 							<ul class="bussiness-hour">
-								<li>Lunes-Viernes: <span class="pull-right">9am - 5pm.</span></li>
-								<li>Sabado: <span class="pull-right">09am - 1pm.</span></li>
+								<li>Lunes-Viernes: <span class="pull-right">9am - 5pm</span></li>
+								<li>Sabado: <span class="pull-right">9am - 1pm</span></li>
 								<li>Domingo: <span class="pull-right">Cerrado</span></li>
 							</ul>
 						</div>
