--- a/namaste/namaste_app/templates/citas-solicitadas.html
+++ b/namaste/namaste_app/templates/citas-solicitadas.html
@@ -91,8 +91,6 @@ ion-icon {
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
-
 <h1>Citas Solicitadas</h1>
 <button id="toggle-button" class="toggle-button">Show All Columns</button>
 <table id="data-table">
@@ -104,6 +102,7 @@ ion-icon {
             <th class="email">Email</th>
             <th class="fecha">Fecha Solicitada</th>
             <th class="servicio">Servicio</th>
+            <th>Acción</th>
         </tr>
     </thead>
     <tbody>
