--- a/namaste/namaste_app/templates/mensajes.html
+++ b/namaste/namaste_app/templates/mensajes.html
@@ -113,6 +113,7 @@ ion-icon {
             <th class="apellido">Apellido</th>
             <th class="email">Email</th>
             <th class="mensaje">Mensaje</th>
+            <th>Acción</th>
         </tr>
     </thead>
     <tbody>
