--- a/namaste/namaste_app/templates/registro.html
+++ b/namaste/namaste_app/templates/registro.html
@@ -106,6 +106,7 @@ ion-icon {
             <th class="pago_total">Pago Total ($)</th>
             <th class="metodo">Metodo de Pago</th>
             <th class="comentarios">Comentarios</th>
+            <th>Acción</th>
         </tr>
     </thead>
     <tbody>
