--- a/namaste/namaste_app/templates/buscar_cliente.html
+++ b/namaste/namaste_app/templates/buscar_cliente.html
@@ -101,6 +101,7 @@
             <th>Apellido</th>
             <th>Telefono</th>
             <th>Email</th>
+            <th>Acción</th>
         </tr>
     </thead>
     <tbody>
